<resources>
    <string name="app_name">Project 7</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="product_insert">Product added to database with Id : %d</string>
    <string name="product">Product %d</string>
    <string name="phone_number">9988779988</string>
    <string name="supplier">Supplier %d</string>
    <string name="total_rows_text">Total Number of Rows in Inventory Database is  %d</string>
    <string name="new_line_text">\n</string>
    <string name="row_heading">Id | Product Name | Price | Quantity | Supplier Name | Supplier Phone Number</string>
    <string name="bar_separate"> &#160;|&#160; </string>
    <string name="product_name_text">Product Name</string>
    <string name="price_text">Price</string>
    <string name="quantity_text">Quantity</string>
    <string name="sale">Sale</string>
    <string name="sale_button">Sale Button</string>
    <string name="product_sale_success">Product Sale Success</string>
    <string name="product_sale_fail">Product Sale Fail</string>
    <string name="product_not_available">Product Not Available</string>
    <string name="no_products_add_some">No Products Available. Please Add Some Products</string>
    <string name="products_removed">%d Products removed</string>
    <string name="menu_submit">Submit</string>
    <string name="menu_delete">Delete</string>
    <string name="product_name_required">Enter Product Name</string>
    <string name="quantity_required">Enter Quantity</string>
    <string name="price_required">Price Required</string>
    <string name="supplier_name_required">Enter Supplier Name</string>
    <string name="supplier_phone_number_required">Enter Supplier Phone Number</string>
    <string name="valid_quantity">Enter Valid Quantity</string>
    <string name="valid_price">Enter Valid Price</string>
    <string name="product_added_id_text">Product Added with id %d</string>
    <string name="product_save_error">Error in Saving Product</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_price">Enter Price</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="enter_supplier_name">Enter Supplier Name</string>
    <string name="supplier_name_text">Supplier Name</string>
    <string name="enter_supplier_phone_number">Enter Supplier Phone Number</string>
    <string name="supplier_phone_number_text">Supplier Phone Number</string>
    <string name="valid_supplier_number">Enter Valid 10 digit Supplier Phone Number</string>
    <string name="product_delete_success">Product Delete Success</string>
    <string name="product_update_error">Error in Updating Product Details</string>
    <string name="product_update_success">Product Update Success</string>
    <string name="product_delete_error">Error in deleting Product</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="delete_dialog_product">Delete the Product ?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="product_details">Product Details</string>
    <string name="order">Order</string>
    <string name="quantity_rate">Quantity Rate</string>
    <string name="update_quantity">Update Quantity</string>
    <string name="format_price">Rs.%s</string>
    <string name="valid_quantity_rate">Please Enter Valid Quantity Rate</string>
    <string name="quantity_update_success">Quantity Update Success</string>
    <string name="unable_to_contact_supplier">Unable to contact Supplier</string>
</resources>
