<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddProductActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/productNameTextLayout"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:hint="@string/product_name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/productPriceTextLayout"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:layout_marginRight="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:hint="@string/price_text"
        app:layout_constraintEnd_toEndOf="@+id/productNameTextLayout"
        app:layout_constraintStart_toStartOf="@+id/productNameTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/productNameTextLayout">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/productQuantityTextLayout"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:hint="@string/quantity_text"
        app:layout_constraintEnd_toEndOf="@+id/productPriceTextLayout"
        app:layout_constraintStart_toStartOf="@+id/productPriceTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/productPriceTextLayout">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberSigned" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/supplierNameTextLayout"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:hint="@string/supplier_name_text"
        app:layout_constraintEnd_toEndOf="@+id/productQuantityTextLayout"
        app:layout_constraintStart_toStartOf="@+id/productQuantityTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/productQuantityTextLayout">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/supplierPhoneNumberTextLayout"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:hint="@string/supplier_phone_number_text"
        app:layout_constraintEnd_toEndOf="@+id/supplierNameTextLayout"
        app:layout_constraintStart_toStartOf="@+id/supplierNameTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/supplierNameTextLayout">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>